--- a/src/css/spiral.css
+++ b/src/css/spiral.css
@@ -1,5 +1,5 @@
 #spiral {
-    width: 500px;
+    width: 540px;
     aspect-ratio: 1/1;
     position: relative;
 }
@@ -7,104 +7,105 @@
     position: absolute;
     color: red;
     background-color: white;
+    /* display: none; */
 }
 #h0 {
-    left: 255px;
+    left: 250px;
     top: 265px;
 }
 #h1 {
-    left: 305px;
-    top: 270px;
-}
-#h2 {
-    left: 230px;
+    left: 280px;
     top: 310px;
 }
-#h3 {
+#h2 {
     left: 200px;
-    top: 230px;
+    top: 240px;
+}
+#h3 {
+    left: 320px;
+    top: 190px;
 }
 #h4 {
-    left: 280px;
-    top: 180px;
+    left: 350px;
+    top: 320px;
 }
 #h5 {
-    left: 360px;
-    top: 260px;
-}
-#h6 {
-    left: 320px;
-    top: 350px;
-}
-#h7 {
-    left: 180px;
-    top: 340px;
-}
-#h8 {
-    left:145px;
-    top: 220px;
-}
-#h9 {
-    left: 240px;
-    top: 125px;
-}
-#h10 {
-    left: 360px;
-    top: 155px;
-}
-#h11 {
-    left: 415px;
-    top: 260px;
-}
-#h12 {
-    left: 365px;
-    top: 380px;
-}
-#h13 {
-    left: 180px;
-    top: 410px;
-}
-#h14 {
-    left: 85px;
-    top: 280px;
-}
-#h15 {
-    left: 140px;
-    top: 120px;
-}
-#h16 {
-    left: 340px;
-    top: 80px;
-}
-#h17 {
-    left: 455px;
-    top: 200px;
-}
-#h18 {
-    left: 445px;
+    left: 220px;
     top: 370px;
 }
-#h19 {
-    left: 320px;
-    top: 470px;
+#h6 {
+    left: 140px;
+    top: 260px;
 }
-#h20 {
-    left: 120px;
-    top: 445px;
+#h7 {
+    left: 220px;
+    top: 140px;
 }
-#h21 {
-    left: 35px;
-    top: 330px;
+#h8 {
+    left:360px;
+    top: 160px;
 }
-#h22 {
-    left: 30px;
+#h9 {
+    left: 415px;
+    top: 290px;
+}
+#h10 {
+    left: 340px;
+    top: 410px;
+}
+#h11 {
+    left: 190px;
+    top: 420px;
+}
+#h12 {
+    left: 90px;
+    top: 320px;
+}
+#h13 {
+    left: 100px;
     top: 180px;
 }
-#h23 {
+#h14 {
+    left: 210px;
+    top: 90px;
+}
+#h15 {
+    left: 350px;
+    top: 90px;
+}
+#h16 {
+    left: 450px;
+    top: 190px;
+}
+#h17 {
+    left: 460px;
+    top: 340px;
+}
+#h18 {
+    left: 370px;
+    top: 450px;
+}
+#h19 {
+    left: 230px;
+    top: 490px;
+}
+#h20 {
     left: 100px;
-    top: 70px;
+    top: 440px;
+}
+#h21 {
+    left: 20px;
+    top: 310px;
+}
+#h22 {
+    left: 40px;
+    top: 170px;
+}
+#h23 {
+    left: 125px;
+    top: 60px;
 }
 #h24 {
-    left: 280px;
-    top: 10px;
+    left: 270px;
+    top: 20px;
 }
