--- a/src/css/spiral.css
+++ b/src/css/spiral.css
@@ -3,109 +3,110 @@
     aspect-ratio: 1/1;
     position: relative;
 }
-.hour {
+#spiral .hour {
     position: absolute;
     color: red;
     background-color: white;
     /* display: none; */
 }
-#h0 {
+
+#spiral #h0 {
     left: 250px;
     top: 265px;
 }
-#h1 {
+#spiral #h1 {
     left: 280px;
     top: 310px;
 }
-#h2 {
+#spiral #h2 {
     left: 200px;
     top: 240px;
 }
-#h3 {
+#spiral #h3 {
     left: 320px;
     top: 190px;
 }
-#h4 {
+#spiral #h4 {
     left: 350px;
     top: 320px;
 }
-#h5 {
+#spiral #h5 {
     left: 220px;
     top: 370px;
 }
-#h6 {
+#spiral #h6 {
     left: 140px;
     top: 260px;
 }
-#h7 {
+#spiral #h7 {
     left: 220px;
     top: 140px;
 }
-#h8 {
+#spiral #h8 {
     left:360px;
     top: 160px;
 }
-#h9 {
+#spiral #h9 {
     left: 415px;
     top: 290px;
 }
-#h10 {
+#spiral #h10 {
     left: 340px;
     top: 410px;
 }
-#h11 {
+#spiral #h11 {
     left: 190px;
     top: 420px;
 }
-#h12 {
+#spiral #h12 {
     left: 90px;
     top: 320px;
 }
-#h13 {
+#spiral #h13 {
     left: 100px;
     top: 180px;
 }
-#h14 {
+#spiral #h14 {
     left: 210px;
     top: 90px;
 }
-#h15 {
+#spiral #h15 {
     left: 350px;
     top: 90px;
 }
-#h16 {
+#spiral #h16 {
     left: 450px;
     top: 190px;
 }
-#h17 {
+#spiral #h17 {
     left: 460px;
     top: 340px;
 }
-#h18 {
+#spiral #h18 {
     left: 370px;
     top: 450px;
 }
-#h19 {
+#spiral #h19 {
     left: 230px;
     top: 490px;
 }
-#h20 {
+#spiral #h20 {
     left: 100px;
     top: 440px;
 }
-#h21 {
+#spiral #h21 {
     left: 20px;
     top: 310px;
 }
-#h22 {
+#spiral #h22 {
     left: 40px;
     top: 170px;
 }
-#h23 {
+#spiral #h23 {
     left: 125px;
     top: 60px;
 }
-#h24 {
+#spiral #h24 {
     left: 270px;
     top: 20px;
 }
