--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -20,7 +20,7 @@
     /* scale: 0.9; */
 }
 .lll {
-    transform: translate(0%,-100%) scaleY(-1);
+    transform: translate(0%,-100%);
 }
 
 #spiralTime #h0 {
