--- a/src/spiral/segs.css
+++ b/src/spiral/segs.css
@@ -1,4 +1,20 @@
-
+/* for bigger frags */
+/* #spiralTime #frags {
+    display: inline;
+    scale: 1.3;
+    margin-left: 5px;
+    opacity: 0;
+} */
+#spiralTime .segments {
+    position: absolute;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+/* for bigger frags */
+    /* width: 480px;
+    height: 490px; */
+}
 #spiralTime .seg {
     display: inline;
     position: absolute;
