--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -1,17 +1,31 @@
 #spiralTime {
-    /* min-width: 510px; */
-    /* aspect-ratio: 1/1; */
     position: relative;
+    width: 510px;
+    height: 510px;
 }
-#spiralTime .hour {
+/* ------------- */
+#spiralTime #segmentsFg {
+    z-index: 100;
+}
+#spiralTime .segments {
     position: absolute;
-    color: red;
-    /* background-color: white; */
-    border-radius: 50%;
-    padding: 2px;
-    /* display: none; */
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 490px;
+    height: 490px;
 }
-#spiralTime svg {
+
+/* for line frags */
+#spiralTime .frags {
+    display: inline;
+    scale: 1.3;
+    margin-top: 20px;
+    margin-left: 25px;
+}
+
+#spiralTime #circles svg {
     position: absolute;
 }
 
@@ -19,135 +33,217 @@
     transform: translate(0%, -100%);
 }
 
+/* -------------- */
+#spiralTime .hour {
+    position: absolute;
+    color: gray;
+    /* background-color: white; */
+    border-radius: 50%;
+    padding: 2px;
+    /* display: none; */
+}
+
+/* -----outside----- */
 #spiralTime #h0 {
-    left: 275px;
-    top: 265px;
+    left:230px;
+    top:250px;
 }
 #spiralTime #h1 {
-    left: 290px;
-    top: 315px;
+    left:230px;
+    top:325px;
 }
 #spiralTime #h2 {
-    left: 225px;
-    top: 245px;
+    left:210px;
+    top:190px;
 }
 #spiralTime #h3 {
-    left: 335px;
-    top: 220px;
+    left:345px;
+    top:213px;
 }
 #spiralTime #h4 {
-    left: 350px;
-    top: 330px;
+    left:315px;
+    top:350px;
 }
 #spiralTime #h5 {
-    left: 230px;
-    top: 365px;
+    left:170px;
+    top:345px;
 }
 #spiralTime #h6 {
-    left: 165px;
-    top: 265px;
+    left:135px;
+    top:215px;
 }
 #spiralTime #h7 {
-    left: 235px;
-    top: 160px;
+    left:240px;
+    top:120px;
 }
 #spiralTime #h8 {
-    left: 370px;
-    top: 175px;
+    left:375px;
+    top:160px;
 }
 #spiralTime #h9 {
-    left: 420px;
-    top: 295px;
+    left:405px;
+    top:300px;
 }
 #spiralTime #h10 {
-    left: 345px;
-    top: 410px;
+    left:305px;
+    top:410px;
 }
 #spiralTime #h11 {
-    left: 215px;
-    top: 420px;
+    left:165px;
+    top:405px;
 }
 #spiralTime #h12 {
-    left: 120px;
-    top: 335px;
+    left:75px;
+    top:295px;
 }
 #spiralTime #h13 {
-    left: 125px;
-    top: 195px;
+    left:100px;
+    top:160px;
 }
 #spiralTime #h14 {
-    left: 215px;
-    top: 105px;
+    left:210px;
+    top:75px;
 }
 #spiralTime #h15 {
-    left: 360px;
-    top: 105px;
+    left:350px;
+    top:85px;
 }
 #spiralTime #h16 {
-    left: 450px;
-    top: 195px;
+    left:445px;
+    top:190px;
 }
 #spiralTime #h17 {
-    left: 465px;
-    top: 335px;
+    left:445px;
+    top:330px;
 }
 #spiralTime #h18 {
-    left: 390px;
-    top: 450px;
+    left:355px;
+    top:440px;
 }
 #spiralTime #h19 {
-    left: 260px;
-    top: 485px;
+    left:220px;
+    top:470px;
 }
 #spiralTime #h20 {
-    left: 125px;
-    top: 440px;
+    left:90px;
+    top:415px;
 }
 #spiralTime #h21 {
-    left: 60px;
-    top: 325px;
+    left:25px;
+    top:295px;
 }
 #spiralTime #h22 {
-    left: 65px;
-    top: 185px;
+    left:40px;
+    top:160px;
 }
 #spiralTime #h23 {
-    left: 145px;
-    top: 75px;
+    left:135px;
+    top:55px;
 }
 #spiralTime #h24 {
-    left: 280px;
-    top: 40px;
-}
-/* ------------- */
-#spiralTime .segments {
-    z-index: 100;
-    position: relative;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-/* for line frags */
-    width: 490px;
-    height: 490px;
-/* for bigger frags */
-    /* width: 480px;
-    height: 490px; */
+    left:270px;
+    top:15px;
 }
 
-/* for line frags */
-#spiralTime #frags {
-    display: inline;
-    scale: 1.3;
-    margin-top: 20px;
-    margin-left: 25px;
-    /* opacity: 0; */
-}
 
-/* for bigger frags */
-/* #spiralTime #frags {
-    display: inline;
-    scale: 1.3;
-    margin-left: 5px;
-    opacity: 0;
-} */
+/* -----inside----- */
+#spiralTime #hi0 {
+    left:265px;
+    top:245px;
+}
+#spiralTime #hi1 {
+    left:235px;
+    top:290px;
+}
+#spiralTime #hi2 {
+    left:230px;
+    top:210px;
+}
+#spiralTime #hi3 {
+    left:320px;
+    top:223px;
+}
+#spiralTime #hi4 {
+    left:295px;
+    top:320px;
+}
+#spiralTime #hi5 {
+    left:190px;
+    top:320px;
+}
+#spiralTime #hi6 {
+    left:165px;
+    top:225px;
+}
+#spiralTime #hi7 {
+    left:245px;
+    top:150px;
+}
+#spiralTime #hi8 {
+    left:350px;
+    top:185px;
+}
+#spiralTime #hi9 {
+    left:375px;
+    top:295px;
+}
+#spiralTime #hi10 {
+    left:295px;
+    top:380px;
+}
+#spiralTime #hi11 {
+    left:180px;
+    top:375px;
+}
+#spiralTime #hi12 {
+    left:115px;
+    top:290px;
+}
+#spiralTime #hi13 {
+    left:130px;
+    top:175px;
+}
+#spiralTime #hi14 {
+    left:220px;
+    top:105px;
+}
+#spiralTime #hi15 {
+    left:335px;
+    top:115px;
+}
+#spiralTime #hi16 {
+    left:410px;
+    top:200px;
+}
+#spiralTime #hi17 {
+    left:410px;
+    top:320px;
+}
+#spiralTime #hi18 {
+    left:335px;
+    top:410px;
+}
+#spiralTime #hi19 {
+    left:220px;
+    top:440px;
+}
+#spiralTime #hi20 {
+    left:115px;
+    top:390px;
+}
+#spiralTime #hi21 {
+    left:60px;
+    top:290px;
+}
+#spiralTime #hi22 {
+    left:80px;
+    top:170px;
+}
+#spiralTime #hi23 {
+    left:155px;
+    top:80px;
+}
+#spiralTime #hi24 {
+    left:270px;
+    top:50px;
+}
