--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,14 +10,15 @@ html {
 }
 body {
     background-color: dimgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .container {
     min-height: 10px;
     min-width: 10px;
-    background-color: white;
     padding: 10px;
     margin: 10px;
     display: block;
-    width: 540px;
     position: relative;
 }
