--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -119,6 +119,12 @@
         align-items: center;
         padding: 0.2rem 0.5rem;
         font-size: 1rem;
+        z-index: 200;
+
+        &:user-invalid ,
+        &:invalid {
+            color: red;
+        }
     }
 }
 #start {
