--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -70,23 +70,28 @@
 }
 #segmentsBg#segmentsBg .seg.disabled {
     fill: var(--disabled-color) !important;
+    stroke: var(--disabled-color) !important;
 }
 #segmentsBg#segmentsBg .seg.reserved {
     fill: var(--secondary-color) !important;
+    stroke: var(--secondary-color) !important;
 }
 #segmentsBg .seg {
     fill: var(--light-color) !important;
+    stroke: var(--light-color) !important;
 }
 #fragsSelBg .seg.selected ,
 #segmentsBg .seg.selected {
     fill: var(--primary-color) !important;
+    stroke: var(--primary-color) !important;
 }
 #fragsSelBg .selected.hover:not(.clicked) ,
 #segmentsBg .selected.hover:not(.clicked) {
     fill: var(--primary-light-color) !important;
+    stroke: var(--primary-light-color) !important;
 }
-#fragsSelBg .selected.clicked.active.first,
-#fragsSelBg .selected.clicked.active.last ,
+/* #fragsSelBg .selected.clicked.active.first,
+#fragsSelBg .selected.clicked.active.last , */
 #segmentsBg .selected.clicked.active.first,
 #segmentsBg .selected.clicked.active.last {
     filter: url(#shadows);
@@ -94,6 +99,9 @@
 .hand {
     fill: var(--dark-color);
     filter: url(#shadow);
+}
+.hand.clicked {
+    filter: url(#shadow-click);
 }
 
 /* ----- */
