--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -5,7 +5,7 @@
     --secondary-color: #cc98c7ff;
     --disabled-color: #909abdff;
     --dark-color: #3d4b48ff;
-    --light-color: #ffffffff;
+    --light-color: #E5E7F6;
 
     --shadow-light: 0 0 5px 5px var(--light-color);
     --shadow-dark: 0 0 5px 5px var(--dark-color);
@@ -17,7 +17,7 @@
     position: relative;
     width: var(--size);
     height: calc(20px + var(--size));
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Inter, sans-serif;
 
     > div {
         position: relative;
@@ -115,17 +115,19 @@
         flex-direction: column;
         gap: 0.2rem;
         font-size: 1rem;
+        font-weight: bold;
     }
 
     input {
         border-radius: 5px;
         outline: none;
-        border: 1px solid var(--dark-color);
+        border: 2px solid var(--dark-color);
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0.2rem 0.5rem;
+        padding: 0.8rem 1.6rem;
         font-size: 1rem;
+        font-family: Inter, sans-serif;
         z-index: 200;
 
         &:user-invalid,
