--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -18,6 +18,7 @@
     width: var(--size);
     height: calc(20px + var(--size));
     font-family: Inter, sans-serif;
+    background-color: var(--light-color);
 
     > div {
         position: relative;
