--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@ html {
     margin: 0;
 }
 body {
-    background-color: dimgray;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
