--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -116,20 +116,20 @@
         flex-direction: column;
         gap: 0.2rem;
         font-size: 1rem;
-        font-weight: bold;
     }
 
     input {
         border-radius: 5px;
         outline: none;
-        border: 2px solid var(--dark-color);
+        border: 1px solid var(--dark-color);
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0.8rem 1.6rem;
+        padding: 0.6rem 1.2rem;
         font-size: 1rem;
         font-family: Inter, sans-serif;
         z-index: 200;
+        background: var(--light-color);
 
         &:user-invalid,
         &:invalid {
