--- a/src/spiral/spiral.css
+++ b/src/spiral/spiral.css
@@ -110,11 +110,12 @@
     position: relative;
     width: 100%;
     height: 100%;
-
+    
     label {
         display: inline-flex;
         flex-direction: column;
-        gap: 0.2rem;
+        text-align: center;
+        gap: 0.3rem;
         font-size: 1rem;
     }
 
